# VoxelEngine3D

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  build_run.bat  build_run.sh  readme.md
dependencies/GLFW/: CMakeLists.txt
dependencies/glad/: glad.c  glad.h
dependencies/glew/: INSTALL_RECEIPT.json
dependencies/glfw/: CMakeLists.txt
dependencies/glfw/include/GLFW/: glfw3.h
dependencies/glm/: CMakeLists.txt
dependencies/imgui/: imgui.cpp  imgui_impl_glfw.h
dependencies/json/: json.hpp
dependencies/spline/: spline.h
resources/blocks/: air.txt  bedrock.txt  block_data.json  cobblestone.txt  crafting_table.txt  diamond_block.txt  dirt.txt  glowstone.txt  grass.txt  gravel.txt  ice_block.txt  jungle_wood.txt  oak_leaves.txt  oak_wood.txt  sand.txt  snowy_grass_block.txt  stone.txt  water.txt  wood.txt
resources/shaders/: BlockBreakFrag.glsl  BlockBreakVert.glsl  ChunkFrag.glsl  ChunkFragGreedy.glsl  ChunkLODFrag.glsl  ChunkLODVert.glsl  ChunkVert.glsl  ChunkVertGreedy.glsl  HighlightFrag.glsl  OutlineVert.glsl  QuadFrag.glsl  QuadVert.glsl
resources/terrain/: biomeData.json  structureData.json  terrain.json
shaders/: BlockBreakFrag.glsl  BlockBreakVert.glsl  ChunkFrag.glsl  ChunkFragGreedy.glsl  ChunkVert.glsl  CrossHairFrag.glsl  CrossHairVert.glsl  HighlightVert.glsl  OutlineFrag.glsl  OutlineGeom.glsl  OutlineVert.glsl  fragment.glsl  vertex.glsl
src/: AppConstants.hpp  Application.cpp  Application.h  Application.hpp  Config.cpp  Config.h  Config.hpp  Constants.h  EngineConfig.hpp  config.cpp  config.h  glad.c  main.cpp
src/application/: Application.cpp  Application.hpp  Window.cpp  Window.hpp
src/camera/: Camera.cpp  Camera.h  Camera.hpp
src/debug_gui/: ChunkMapRenderer.cpp  ChunkMapRenderer.hpp  DebugGui.cpp  DebugGui.h  DebugGui.hpp
src/game_state/: IGameState.hpp  MenuState.cpp  MenuState.hpp
src/gui/: CrossHair.cpp  CrossHair.h  CrossHair.hpp  Hotbar.cpp  Hotbar.h  Hotbar.hpp
src/input/: KeyPress.hpp  Keyboard.cpp  Keyboard.h  Keyboard.hpp  Mouse.cpp  Mouse.hpp
src/math/: AABB.hpp  Plane.hpp
src/physics/: Ray.h  Ray.hpp
src/player/: Inventory.cpp  Inventory.h  Inventory.hpp  ItemStack.cpp  ItemStack.h  ItemStack.hpp  Player.cpp  Player.h  Player.hpp
src/renderer/: BlockBreakRenderer.cpp  BlockBreakRenderer.h  BlockBreakRenderer.hpp  BlockOutlineRenderer.cpp  BlockOutlineRenderer.h  BlockOutlineRenderer.hpp  ChunkRenderer.cpp  ChunkRenderer.hpp  GuiRenderer.cpp  GuiRenderer.h  GuiRenderer.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Renderer2D.cpp  Renderer2D.h  Renderer2D.hpp  ViewFrustum.cpp  ViewFrustum.hpp
src/resources/: Image.cpp  Image.hpp  ResourceManager.cpp  ResourceManager.h  ResourceManager.hpp
src/shaders/: Shader.cpp  Shader.h  Shader.hpp  ShaderManager.cpp  ShaderManager.h  ShaderManager.hpp
src/utils/: JsonUtils.cpp  JsonUtils.hpp  Timer.cpp  Timer.hpp  Utils.cpp  Utils.h  Utils.hpp
src/world/: World.cpp  World.h  World.hpp
src/world/block/: Block.cpp  Block.h  Block.hpp  BlockDB.cpp  BlockDB.h  BlockDB.hpp
src/world/chunk/: Chunk.cpp  Chunk.h  Chunk.hpp  ChunkAlg.cpp  ChunkAlg.hpp  ChunkInfo.hpp  ChunkKey.h  ChunkKey.hpp  ChunkLightInfo.cpp  ChunkLightInfo.hpp  ChunkManager.cpp  ChunkManager.h  ChunkManager.hpp  ChunkMesh.cpp  ChunkMesh.h  ChunkMesh.hpp  ChunkMeshBuilder.cpp  ChunkMeshBuilder.hpp  ChunkMeshBuilderLod.cpp  ChunkMeshBuilderLod.hpp  ChunkMeshInfo.cpp  ChunkMeshInfo.hpp  ChunkRenderer.cpp  ChunkRenderer.h  ChunkRenderer.hpp  ChunkStructuresInfo.cpp  ChunkStructuresInfo.hpp  ChunkTerrainInfo.cpp  ChunkTerrainInfo.hpp  ChunkVertex.hpp
src/world/chunklet/: Chunklet.cpp  Chunklet.h  Chunklet.hpp
src/world/events/: DigEvent.cpp  DigEvent.h  DigEvent.hpp  IEvent.h  IEvent.hpp
src/world/generation/: Biome.cpp  Biome.hpp  BlockAndPos.hpp  Structure.cpp  Structure.hpp  StructureBuilder.cpp  StructureBuilder.hpp  StructureManager.cpp  StructureManager.hpp  TerrainGenerator.cpp  TerrainGenerator.h  TerrainGenerator.hpp
src/world/save/: WorldSave.cpp  WorldSave.hpp
